@@ -1,3 +1,9 @@
+
+2020-11-18  Simon Sobisch <simonsobisch@gnu.org>
+
+	* common.c (cob_init): skip initialization again if already done as
+	  external callers may call it falsely again
+
 2020-11-16  James K. Lowden  <jklowden@symas.com>
 
 	* common.c (cob_init): set LIBC_FATAL_STDERR_ to prevent glibc
